# wau-python-sdk

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOY.md  FAQ.md  QUICKSTART.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  auth.md  quickstart.md  retry_circuit.md
examples/chat_stream/: main.py
examples/five_scenarios/: main.py
examples/heartbeat_loop/: main.py
examples/list_agents/: main.py
examples/submit_task/: main.py
src/wau_sdk/: __init__.py  _auth.py  _circuit.py  _client.py  _errors.py  _oauth.py  _options.py  _retry.py  _transport.py  agent_runtime.py  agents.py  chat.py  handshake.py  intent.py  kernel.py  mcp_auth.py  mcp_client.py  mcp_dto.py  mcp_errors.py  mcp_streaming.py  mcp_tools.py  tasks.py  types.py  ucp_client.py  ucp_dto.py  ucp_errors.py  ucp_stripe.py  universe_labels.py
src/wau_sdk/bot/: __init__.py
src/wau_sdk/bot/common/: __init__.py  account.py  bot.py  bots_service.py  message.py  options.py
src/wau_sdk/bot/dingtalk/: bot.py
src/wau_sdk/bot/discord/: __init__.py  bot.py
src/wau_sdk/bot/email/: bot.py
src/wau_sdk/bot/feishu/: bot.py
src/wau_sdk/bot/qq/: bot.py
src/wau_sdk/bot/slack/: bot.py
src/wau_sdk/bot/telegram/: __init__.py  bot.py
src/wau_sdk/bot/webhook/: __init__.py  bot.py
src/wau_sdk/dingtalk/: bot.py
src/wau_sdk/email/: bot.py
tests/: test_agent_runtime.py  test_agents.py  test_async_client.py  test_auth.py  test_chat.py  test_circuit.py  test_handshake.py  test_kernel.py  test_mcp_client.py  test_mcp_streaming.py  test_oauth.py  test_retry.py  test_tasks.py  test_transport.py  test_ucp_client.py  test_universe_labels.py  test_wau_workflow.py
tests/contract/: test_5_scenarios.py  test_golden_schema.py
tests/test_bot/discord/: test_discord.py
tests/test_bot/telegram/: test_telegram.py
tests/test_bot/webhook/: test_webhook.py
tests/test_e2e/: test_dingtalk_e2e.py  test_email_e2e.py  test_feishu_e2e.py  test_qq_e2e.py  test_slack_e2e.py
