[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "wau-sdk"
version = "0.6.0-preview.1"
description = "Official Python SDK for WAU-core-kernel — AI agent dispatch"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "youhaoxi", email = "liuhaoshi888@gmail.com" }]
requires-python = ">=3.10"
keywords = ["wau", "ai-agents", "sdk", "dispatch", "kernel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "grpclib>=0.4",         # M3.1 stub
    "PyJWT>=2.8",
    "tenacity>=8.2",
    "protobuf>=5.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",          # mock httpx
]

[project.urls]
Homepage = "https://github.com/XploreAlpha/wau-python-sdk"
Issues = "https://github.com/XploreAlpha/wau-python-sdk/issues"
Source = "https://github.com/XploreAlpha/wau-python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/wau_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line-too-long (黑名单 100 但允许稍长)

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "contract: 5-scenario contract tests (require mock kernel)",
    "integration: integration tests (require real kernel)",
]
